--- a/_posts/2023-01-22-cryptum.markdown
+++ b/_posts/2023-01-22-cryptum.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Cryptum"
 date: 2023-01-22 00:00:00
 categories: projects
-tags: c tillitis typescript svelte
+tags: c tillitis typescript svelte boilermake 2023
 mathjax: false
 ---
 * content
