--- a/_posts/2023-07-01-vimjail.markdown
+++ b/_posts/2023-07-01-vimjail.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "vimjail - uiuctf 2023"
 date:   2023-07-01 00:00:00
 categories: writeups
-tags: misc vimjail jail 2023
+tags: misc vimjail jail
 excerpt: A fun twist on the escaping vim meme.
 mathjax: false
 ---
