--- a/_posts/2024-06-29-astea.markdown
+++ b/_posts/2024-06-29-astea.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Astea - uiuctf2024"
 date: 2024-06-29 00:00:00
 categories: writeups
-tags: misc pyjail 2024
+tags: misc pyjail
 excerpt: I heard you can get sent to jail for refusing a cup of tea in England.
 mathjax: false
 ---
