--- a/_posts/2025-06-16-cube.markdown
+++ b/_posts/2025-06-16-cube.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "cube"
 date: 2025-06-16 12:55:00
 categories: projects
-tags: c graphics ncurses 2025
+tags: c graphics ncurses
 mathjax: false
 ---
 * content
