--- a/_posts/2025-06-25-engine.markdown
+++ b/_posts/2025-06-25-engine.markdown
@@ -21,11 +21,13 @@ A graphics engine written from scratch in rust that can load .obj/.mtl files.
 
 ## Introduction
 
-Graphics always seemed like one of those deep, complex corners of computer science. So for the longest time, I avoided it. It felt intimidating, but I decided to give it a try. That eventually turned into a basic graphics engine capable of rendering `.obj` and `.mtl` files.
+Graphics always seemed like one of those complex corners of computer science. So I never really gave it a try. One day I felt like learning more and that eventually turned into a basic graphics engine capable of rendering `.obj` and `.mtl` files.
 
 This blog post is my attempt to break down some of the fundamental concepts behind computer graphics with diving too deeply into the math.I'll try to explain in a way that someone with minimal experience can still follow and (hopefully) find enjoyable.
 
-Quick side note: the engine I wrote runs entirely on the CPU. I avoided shaders on purpose—not because I didn’t want performance, but because I wanted to learn what’s actually going on under the hood. Sure, it’s slower (especially on larger meshes), but the trade-off was worth it for the learning experience.
+Quick side note: the engine I wrote runs entirely on the CPU. I avoided shaders on purpose—not because I didn’t want performance, but because I wanted to learn what’s actually going on under the hood. Sure, it’s slower (especially on larger meshes), but the trade-off was worth it for the learning experience. 
+
+This is also my first project ever in rust so excuse the possible bad rust practices.
 
 ## Important Concepts
 
