--- a/_posts/2025-03-06-ktane.markdown
+++ b/_posts/2025-03-06-ktane.markdown
@@ -13,6 +13,8 @@ mathjax: false
 
 Inspired by Keep Talking And Nobody Explodes, two players must work together to finish their provided code samples—one controlling the editor, the other viewing the keybind documentation. Can you pass your test cases before your code is deployed to prod?
 
+Play the game [here](https://typing.neilhomm.es)!
+
 
 
 
